# Business-Analytics-Portfolio

./: README.md  pyproject.toml
assignments/assignment-03/: README.md  pyproject.toml
assignments/assignment-06/notebooks/.ipynb_checkpoints/: model_development-checkpoint.ipynb
