[project]
name = "cybersecurity-disclosure-analysis"
version = "0.1.0"
description = "Empirical analysis of cybersecurity disclosure timing and market reactions"
authors = [
    {name = "Timothy Spivey", email = "ts2427@jagmail.southalabama.edu"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "jupyter>=1.0.0",
    "requests>=2.28.0",
    "yfinance>=0.2.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "plotly>=5.14.0",
    "streamlit>=1.28.0",
    "sec-edgar-downloader>=4.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"